compiler-core/src/parse/snapshots/gleam_core__parse__tests__missing_constructor_arguments.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npublic type A {\n  A(Int)\n}\n\nconst a = A()\n"
snapshot_kind: text
---
----- SOURCE CODE

public type A {
  A(Int)
}

const a = A()


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:6:12
  │
6 │ const a = A()
  │            ^^ I was expecting arguments here

A record must be passed arguments when constructed.
